# tmath

./: Makefile  book.toml  flake.nix  lakefile.lean  mmath.md  pyproject.toml  rels.txt  slides.md  slides2.md
Mmath/: Alg1.lean  Basics.lean  Fnd.lean  Logic.lean  Notation.lean
Mmath/Numbers/: Nat.lean
Tmath/: Basics.lean  Fnd.lean
prose/: SUMMARY.md  conf.py  index.md
prose/expr/: coc.md  fun.md  func.md  index.md  lam.md  lambda.md  lean.md  meta.md  syn.md
prose/subst/: data.md  func.md  lambda.md  lean.md  meta.md  prog.md  types.md
tikz/: church-rosser.tex
todo/: eq.md  lam.md  rels.txt  slides.md  syn.md
