[tool.poetry]
name = "tmath"
version = "0.1.0"
description = ""
authors = ["suhr"]
license = "CC BY-SA"

[tool.poetry.dependencies]
python = "^3.9"

livereload = "*"
myst-parser = {version = "*", extras = ["linkify"]}
sphinx = "*"
sphinx-book-theme = "^0.2.0"
sphinx-copybutton = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
